tests/machine/x/cpp/partial_application.error
line 14: ../../../tests/machine/x/cpp/partial_application.cpp:14:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   14 | auto add(auto a, auto b) {
      |          ^~~~
../../../tests/machine/x/cpp/partial_application.cpp:14:18: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   14 | auto add(auto a, auto b) {
      |                  ^~~~
../../../tests/machine/x/cpp/partial_application.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/partial_application.cpp:19:20: error: no matching function for call to ‘add(int)’
   19 |     auto add5 = add(5);
      |                 ~~~^~~
../../../tests/machine/x/cpp/partial_application.cpp:14:6: note: candidate: ‘template<class auto:1, class auto:2> auto add(auto:1, auto:2)’
   14 | auto add(auto a, auto b) {
      |      ^~~
../../../tests/machine/x/cpp/partial_application.cpp:14:6: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/partial_application.cpp:19:20: note:   candidate expects 2 arguments, 1 provided
   19 |     auto add5 = add(5);
      |                 ~~~^~~

 13 | 
 14 | auto add(auto a, auto b) {
 15 |     return (a + b);
